--- a/fddp.cabal
+++ b/fddp.cabal
@@ -7,5 +7,6 @@ cabal-version:     >= 1.8
 
 executable fddp
     main-is:       Main.hs
-    ghc-options:   -Wall -rtsopts -fllvm
+    other-modules: EitherT, Exceptions, FileCompare
+    ghc-options:   -Wall -rtsopts -fllvm -O2
     build-depends: base, transformers, directory, filepath, enumerator
